--- a/pages/clases.html
+++ b/pages/clases.html
@@ -64,7 +64,7 @@
 <div class="container position-sticky z-index-sticky top-0"><div class="row"><div class="col-12">
   <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
     <div class="container-fluid px-0">
-      <a class="navbar-brand font-weight-bolder ms-sm-3" href="https://demos.creative-tim.com/material-kit/index" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+      <a class="navbar-brand font-weight-bolder ms-sm-3" href="/index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
       <span class="text-xxl">ECOsuelos</span> 
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -138,7 +138,7 @@
             </ul>
           </li>
           <li class="nav-item ms-lg-auto">
-            <a class="nav-link nav-link-icon me-2" href="https://github.com/creativetimofficial/material-kit" target="_blank">
+            <a class="nav-link nav-link-icon me-2" href="/pages/calcular.html">
               <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Calcular">Calcular Proceso</p>
             </a>
           </li>
@@ -360,28 +360,28 @@
                                   <div class="text-center bg-success py-5 px-4">
                                       <img class="img-fluid mb-4" src="../assets/img/cultivo.c.jpg" alt="">
                                       <!--h1 class="display-6 text-white" data-toggle="counter-up">100</h1-->
-                                      <span class="fs-5 fw-semi-bold text-amarillo">Cultivo De Cacao</span>
+                                      <span class="fs-5 fw-semi-bold text-amarillo">Cultivo de Cacao</span>
                                   </div>
                               </div>
                               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.3s">
                                   <div class="text-center bg-amarillo py-5 px-4">
                                       <img class="img-fluid mb-4" src="../assets/img/OIP (1).jfif" alt="">
                                       <!--h1 class="display-6" data-toggle="counter-up"></h1-->
-                                      <span class="fs-5 fw-semi-bold text-success">Cultivo De Cafe</span>
+                                      <span class="fs-5 fw-semi-bold text-success">Cultivo de Cafe</span>
                                   </div>
                               </div>
                               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.5s">
                                   <div class="text-center bg-amarillo py-5 px-4">
                                       <img class="img-fluid mb-4" src="../assets/img/pasto2.jpg" alt="">
                                       <!--h1 class="display-6" data-toggle="counter-up">2619</h1-->
-                                      <span class="fs-5 fw-semi-bold text-success">Cultivo De Pasto</span>
+                                      <span class="fs-5 fw-semi-bold text-success">Cultivo de Pasto</span>
                                   </div>
                               </div>
                               <div class="col-sm-6 wow fadeIn" data-wow-delay="0.7s">
                                   <div class="text-center bg-success py-5 px-4">
                                       <img class="img-fluid mb-4" src="../assets/img/arroz.webp" alt="">
                                       <!--h1 class="display-6 text-white" data-toggle="counter-up">51940</h1-->
-                                      <span class="fs-5 fw-semi-bold text-amarillo">Cultico De arroz</span>
+                                      <span class="fs-5 fw-semi-bold text-amarillo">Cultivo de Arroz</span>
                                   </div>
                               </div>
                           </div>
