--- a/pages/suelo.html
+++ b/pages/suelo.html
@@ -64,7 +64,7 @@
 <div class="container position-sticky z-index-sticky top-0"><div class="row"><div class="col-12">
   <nav class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
     <div class="container-fluid px-0">
-      <a class="navbar-brand font-weight-bolder ms-sm-3" href="https://demos.creative-tim.com/material-kit/index" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+      <a class="navbar-brand font-weight-bolder ms-sm-3" href="/index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
       <span class="text-xxl">ECOsuelos</span> 
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -138,7 +138,7 @@
             </ul>
           </li>
           <li class="nav-item ms-lg-auto">
-            <a class="nav-link nav-link-icon me-2" href="https://github.com/creativetimofficial/material-kit" target="_blank">
+            <a class="nav-link nav-link-icon me-2" href="/pages/calcular.html">
               <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Calcular">Calcular Proceso</p>
             </a>
           </li>
@@ -271,7 +271,7 @@
           <div class="container">
               <div class="text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                   <p class="section-title text-center text-success px-3" style="background-color: #fcfcfe;">Tipos De Suelos.</p>
-                  <h1 class="mb-5">Clasificacion De Los Suelos. </h1>
+                  <h1 class="mb-5">Clasificacion de los suelos. </h1>
               </div>
               <div class="row gy-5 gx-4">
                   <div class="col-lg-4 col-md-6 pt-5 wow fadeInUp" data-wow-delay="0.1s">
