--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -166,7 +166,10 @@
 			</div>
 			<div class="input-group mb-3 p-3 gap-5">
 				<input type="number" class="form-control" placeholder="Afloramiento rocoso" aria-label="Afloramiento rocoso" style="border-bottom: 1px solid green">
-				<input type="number" class="form-control" placeholder="Fertilidad" aria-label="Fertilidad" style="border-bottom: 1px solid green">
+				<!-- <input type="number" class="form-control" placeholder="Fertilidad" aria-label="Fertilidad" style="border-bottom: 1px solid green"> -->
+				<div>
+				<button href="calculo_fertilidad.html" class="form-control" style="border-bottom: 1px solid green">Fertilidad</button>
+				</div>
 				<input type="number" class="form-control" placeholder="Contenido de sales" aria-label="Contenido de sales" style="border-bottom: 1px solid green">
 			</div>
 			<div class="input-group mb-3 p-3 gap-5">
